--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
-  <title>Nikhil Kore | Personal Portfolio</title>
+  <title>Rohit Kukreja | Personal Portfolio</title>
 </head>
 
 <body>
